# UMA-Inverse

./: .claudeignore  .dockerignore  .gitignore  ARCHITECTURE_SPEC.md  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  MAKEFILE  Makefile  ORDER_OF_OPERATIONS.md  README.md  download_trainingdata.txt  main.py  pyproject.toml  requirements.txt  setup.py  test_input.py  test_instantiate.py  test_quick.py
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
configs/: config.yaml  config_v3.yaml
configs/data/: default.yaml
configs/model/: pairmixer_inverse.yaml
configs/old_configs/: config_v1.yaml
configs/trainer/: default.yaml
deploy/hf_space/: README.md
docs/: 2023.12.22.573103.source.xml  DEPLOY.md  SERVING_NOTES.md  architecture.md  benchmarks.md  fig1_architecture.tex  iclr2026_conference.tex  inference.md  ligandMPNN_copypaste.txt  main.tex  preprint.tex  references.bib  v2_preprint.md  v2_training_report.md  v4_plan_draft.md
docs/v5_preprint_package/: EXPERIMENTS.md  compile.sh  preprint.tex  references.bib
logs/: failed_pdbs.txt
notebooks/: boltz_example.ipynb  inference_smoke_test.py
scripts/: _diagnose_val_nan.py  benchmark_interface_recovery.py  deploy_hf_space.sh  deploy_space.py  diag_ar_path.py  download_json_pdbs.py  download_weights.py  inference.py  ligandMPNN_example.ipynb  pilot_run.py  plot_interface_recovery.py  precompute_examples.py  preprocess.py  preprocess_v5.py  probe_inference_wallclock.py  smoke_test_v2.py  summarize_test_benchmarks.py  train.py
scripts/SLURM/: 01a_fetch_data.sh  01b_download_test_splits.sh  01b_preprocess.sh  01c_preprocess_v5.sh  02_pilot_run.sh  02_pilot_v3.sh  02_pilot_v4.sh  03_train_model.sh  03b_train_stage2_ddp.sh  03c_train_stage3_ddp.sh  04_inference.sh  04a_runA_control_warmstart.sh  04a_runA_distogram_warmstart.sh  04a_v3_train_stage1.sh  04a_v4_train_stage1.sh  04a_v5_train_stage1.sh  04b_v3_train_stage2_ddp.sh  04b_v4_train_stage2_ddp.sh  04b_v5_train_stage2_ddp.sh  04b_v5_train_stage2_resume4.sh  04c_v3_train_stage3_ddp.sh  04c_v4_train_stage3_ddp.sh  04c_v5_train_stage3_ddp.sh  04c_v5_train_stage3_resume.sh  05_benchmark.sh  05a_smoke_test.sh  05b_benchmark_all_tests.sh  05c_benchmark_interface_recovery.sh  05c_interface_recovery_job.sh  05d_benchmark_runA.sh  05e_kl_shells.sh  05f_kl_v3_lmpnn.sh  05g_benchmark_v4_full.sh  05h_benchmark_v5_full.sh  05i_benchmark_v5_interface.sh  05j_distal_kl_v5_by_class.sh  05k_cofold_v5.sh  05m_pocket_designs_ext_v5.sh  05n_cofold_ext_build_split.sh  05o_cofold_ext_array.sh  (+40 more)
scripts/paper/: README.md  benchmark_ligandmpnn_postprocess.py  build_cofold_yamls.py  build_ligandmpnn_inputs.py  cofold_metrics.py  compare_k0_ligandmpnn.py  compare_kl_shells.py  compute_pocket_fixed_metrics.py  distal_kl_shift.py  distal_signal_analysis.py  distogram_probe.py  finalize_combined_metrics.py  interface_paired_stats.py  make_supp_cofold_table.py  nucleotide_atom_coverage.py  pocket_fixed_stats.py  run_pocket_fixed_designs.py  select_extended_smallmol_pdbs.py  select_pdbs.py  shell_recovery_comparison.py
scripts/preprint/: build_boltz_yaml.py  build_cofold_yamls.py  build_ligandmpnn_inputs.py  cofold_metrics.py  compute_pocket_fixed_metrics.py  distal_signal_analysis.py  finalize_combined_metrics.py  pocket_fixed_stats.py  select_extended_smallmol_pdbs.py  select_pdbs.py
src/: __init__.py
src/benchmarks/: __init__.py  cli.py  evaluation.py  interface_mask.py  metrics.py  plots.py  report.py  sweeps.py
src/data/: __init__.py  datamodule.py  ligandmpnn_bridge.py  pdb_parser.py
src/inference/: __init__.py  batch.py  cli.py  constraints.py  (+4 more)
tests/: conftest.py  test_datamodule.py  test_distogram.py  test_integration.py  test_pairmixer_block.py  test_pdb_parser.py  test_uma_inverse.py
(+56 files in other folders)
