[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uma-inverse"
version = "0.1.0"
description = "Ligand-conditioned protein inverse folding via PairMixer dense pair representation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.84",
    "einops>=0.8",
    "huggingface-hub>=1.11.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "omegaconf>=2.3",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pytorch-lightning>=2.4",
    "rich>=13.7",
    "scipy>=1.17.1",
    "torch>=2.5",
    "typer>=0.24.2",
    "wandb>=0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[project.scripts]
uma-train = "scripts.train:main"
uma-inverse = "src.inference.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# PyTorch CUDA 12.4 — current stable, supports Ampere (RTX A5500, sm_86)
[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
