[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uma-inverse"
version = "0.1.0"
description = "Ligand-conditioned protein inverse folding via PairMixer dense pair representation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wojciech Sobolewski", email = "wsobolew@ucsc.edu"},
]
keywords = [
    "protein-design",
    "inverse-folding",
    "ligand-conditioned",
    "deep-learning",
    "structural-biology",
    "pair-attention",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.84",
    "einops>=0.8",
    "huggingface-hub>=1.11.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "omegaconf>=2.3",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pytorch-lightning>=2.4",
    "rich>=13.7",
    "scipy>=1.17.1",
    "torch>=2.5",
    "typer>=0.24.2",
    "wandb>=0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[project.urls]
Repository = "https://github.com/<TBD>/UMA-Inverse"
Preprint   = "https://www.biorxiv.org/content/<TBD>"
Weights    = "https://huggingface.co/WSobo/UMA-Inverse_v2"
Issues     = "https://github.com/<TBD>/UMA-Inverse/issues"

[project.scripts]
uma-train = "scripts.train:main"
uma-inverse = "src.inference.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# PyTorch CUDA 12.4 — current stable, supports Ampere (RTX A5500, sm_86)
[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Scripts insert the project root onto sys.path before importing the package,
# which is the standard pattern for runnable entry points and intentionally
# violates "imports at top of file".
"scripts/**/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
